# Yet-Another-Cliche-Handy-Thread

./: .gitignore  CMakeLists.txt  LICENSE  README.md  yacht.h
cmake/: yacht.cmake
include/: template_util.h  ustl.h  yacht.h
test/: main.cpp  test_auxiliary.h  ustl_test.h  yacht_test.h
